test/envoy.yaml
static_resources:
  listeners:
    - name: test
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                use_remote_address: true
                stat_prefix: ingress_http
                codec_type: AUTO
                normalize_path: true
                merge_slashes: true
                path_with_escaped_slashes_action: KEEP_UNCHANGED
                common_http_protocol_options:
                  idle_timeout: 3600s
                  headers_with_underscores_action: ALLOW
                request_timeout: 330s
                http_filters:
                  - name: composite
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.common.matching.v3.ExtensionWithMatcher
                      extension_config:
                        name: composite
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.Composite
                      xds_matcher:
                        matcher_list:
                          matchers:
                            - predicate:
                                and_matcher:
                                  predicate:
                                    - single_predicate:
                                        input:
                                          name: host
                                          typed_config:
                                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                            header_name: "host"
                                        value_match:
                                          exact: "upstream-1"
                                    - single_predicate:
                                        input:
                                          name: path-prefix
                                          typed_config:
                                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                            header_name: ":path"
                                        value_match:
                                          prefix: "/"
                              on_match:
                                action:
                                  name: composite-action
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.ExecuteFilterAction
                                    typed_config:
                                      name: wasm
                                      typed_config:
                                        "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                                        type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                                        value:
                                          config:
                                            vm_config:
                                              runtime: envoy.wasm.runtime.v8
                                              vm_id: proxy-wasm-google-metadata-identity-token-for-upstream-1
                                              code:
                                                local:
                                                  filename: /etc/envoy/proxy-wasm-google-metadata-identity-token.wasm
                                            configuration:
                                              "@type": type.googleapis.com/google.protobuf.StringValue
                                              value: |
                                                {
                                                  "audience": "upstream-1",
                                                  "metadata_server_cluster": "metadataserver",
                                                  "token_cache_duration": 5,
                                                  "original_authorization_propagation_header": "original-authorization"
                                                }
                            - predicate:
                                and_matcher:
                                  predicate:
                                    - single_predicate:
                                        input:
                                          name: host
                                          typed_config:
                                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                            header_name: "host"
                                        value_match:
                                          exact: "upstream-2"
                                    - single_predicate:
                                        input:
                                          name: path-prefix
                                          typed_config:
                                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                            header_name: ":path"
                                        value_match:
                                          prefix: "/"
                              on_match:
                                action:
                                  name: composite-action
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.ExecuteFilterAction
                                    typed_config:
                                      name: wasm
                                      typed_config:
                                        "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                                        type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                                        value:
                                          config:
                                            vm_config:
                                              runtime: envoy.wasm.runtime.v8
                                              vm_id: proxy-wasm-google-metadata-identity-token-for-upstream-2
                                              code:
                                                local:
                                                  filename: /etc/envoy/proxy-wasm-google-metadata-identity-token.wasm
                                            configuration:
                                              "@type": type.googleapis.com/google.protobuf.StringValue
                                              value: |
                                                {
                                                  "audience": "upstream-2",
                                                  "metadata_server_cluster": "metadataserver"
                                                }
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  virtual_hosts:
                    - name: upstream
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: upstream
                            auto_host_rewrite: true

  clusters:
    - name: upstream
      per_connection_buffer_limit_bytes: 52428800
      connect_timeout: 1.00s
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: upstream
                      port_value: 5000

    - name: metadataserver
      connect_timeout: 5000s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: metadataserver
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: metadataserver
                      port_value: 8080

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000
